tests/baselines/reference/systemModuleConstEnumsSeparateCompilation.errors.txt
systemModuleConstEnumsSeparateCompilation.ts(9,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== systemModuleConstEnumsSeparateCompilation.ts (1 errors) ====
    declare function use(a: any);
    const enum TopLevelConstEnum { X }
    
    export function foo() {
        use(TopLevelConstEnum.X);
        use(M.NonTopLevelConstEnum.X);
    }
    
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export const enum NonTopLevelConstEnum { X }
    }